<?xml version="1.0" encoding="utf-8"?>
<com.hei.android.app.widget.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button android:id="@+id/home_btn_search"
        style="@style/DashboardButton"
        android:text="@string/home_search"
        android:drawableTop="@drawable/dashboard_search" />
    <Button android:id="@+id/home_btn_starred"
        style="@style/DashboardButton"
        android:text="@string/home_starred"
        android:drawableTop="@drawable/dashboard_starred" />
    <Button android:id="@+id/home_btn_downloads"
        style="@style/DashboardButton"
        android:text="@string/home_downloads"
        android:drawableTop="@drawable/dashboard_download" />
    <Button android:id="@+id/home_btn_history"
        style="@style/DashboardButton"
        android:text="@string/home_history"
        android:drawableTop="@drawable/dashboard_history" />
</com.hei.android.app.widget.DashboardLayout>

